--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -1,17 +1,204 @@
+@font-face {
+	font-family: "DiabloHeavy";
+	src: url("/assets/fonts/DiabloHeavy.ttf");
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
+
+* {
+	margin: 0;
+	color: #fff;
+	font-family: 'DiabloHeavy';
+}
+
+html,
+body {
+	height: 100%;
+}
 
 body {
-  position: relative;
-  color: white;
-  height: 100vh;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
-  font-family: sans-serif;
-  overflow-y: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	line-height: 1.5;
+	-webkit-font-smoothing: antialiased;
+	background-color: #222;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+	display: block;
+	max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+	font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	overflow-wrap: break-word;
+}
+
+button {
+	background-color: unset;
+	border: unset;
+}
+
+a {
+	text-decoration: unset;
+	color: unset;
+}
+
+#root,
+#__next {
+	isolation: isolate;
+}
+
+h1 {
+	position: relative;
+	padding: 1rem;
+	text-align: center;
+	font-size: 3em;
+	background: linear-gradient(180deg, #FFF3EC 0%, #EEA65E 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	text-shadow: 0 0 15px rgba(128, 0, 0, 0.5);
+	background-clip: text;
+}
+
+h1::before {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 3px;
+	bottom: 0;
+	left: 0;
+	background-image: linear-gradient(to left, rgba(128, 0, 0, 0) 20%, rgba(128, 0, 0, 0.5) 50%, rgba(128, 0, 0, 0.0) 80%)
+}
+
+ul {
+	list-style-type: none;
+	padding: 0;
+}
+
+/* RESET */
+
+.error_container {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 1rem;
+	transform: translate(-50%, -50%);
+	background-color: #333;
+	border: 3px solid black;
+	border-radius: 5px;
+	padding: 1rem;
+	z-index: 200;
+	box-shadow: 0 0 30px black;
+	animation: appear .5s ease;
+	transform-origin: center;
+}
+
+@keyframes appear {
+	from {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+.error_title {
+	font-size: 2em;
+}
+
+.error_btn {
+	color: rgba(0, 0, 0, 0.8);
+	border-radius: 5px;
+	padding: .2rem .5rem;
+	background-color: rgb(119, 9, 9);
+	cursor: pointer;
+}
+
+/* ERROR */
+
+.acts_list {
+	padding: 2rem;
+	display: flex;
+	list-style-type: none;
+	gap: 1rem;
+	background-image: linear-gradient(to bottom, #222 0%, #111 50%, #222 100%);
+}
+
+.act {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	flex: 0 1 20%;
+	cursor: pointer;
+}
+
+.act::before {
+	content: '';
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+.act::before,
+.act_quests {
+	transition: opacity .5s ease;
+}
+
+.act:hover.act::before {
+	opacity: 0.2;
+}
+
+.act_quests {
+	opacity: 0;
+}
+
+.act:hover .act_quests {
+	opacity: 1;
+}
+
+.act_txt {
+	position: absolute;
+	bottom: 1rem;
+	text-align: center;
+}
+
+.act_quests {
+	color: rgba(255, 255, 255, 0.5);
+}
+
+.sub_title {
+	text-align: center;
+	margin-top: 2rem;
+	background: linear-gradient(180deg, #FFF3EC 0%, #EEA65E 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	text-shadow: 0 0 15px rgba(128, 0, 0, 0.5);
+	background-clip: text;
 }
