--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -92,6 +92,7 @@
     align-items: center;
     gap: 2rem;
     width: 100%;
+    margin-top: 2rem;
     padding: 2rem;
 }
 
@@ -103,6 +104,7 @@
 }
 
 .hero:nth-child(2n) {
+    mix-blend-mode: lighten;
     opacity: .3;
 }
 
@@ -117,6 +119,7 @@
 
 .class_img {
     height: 20rem;
+    mix-blend-mode: lighten;
 }
 
 .arrow_invisible {
